# actions

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.html  Dockerfile  LICENSE.html  README.md  README.qmd  VERSION  _quarto.yml  actions.html  badges.html  cite.html  cli.html  codemeta.json  contributors.html  examples.html  gh-actions.html  gh-app-auth.html  help.html  index.html  install.html  listings.json  package.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/: CONTRIBUTING.md  copilot-instructions.md  repos.json  repos.json.bak
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: auto-format.yml  black.yml  build-docker-ccbr-actions.yml  build-python.yml  build.yml  bump-actions-versions.yml  check-links.yml  docs-quartodoc.yml  draft-release.yml  hello.yml  maintain-milestones.yml  post-release.yml  sync-copilot-instructions.yml  test.yml  user-projects.yml
actions/add-issue-label-list/: index.html
actions/build-docker/: index.html
actions/changed-files/: index.html
actions/copy-ruleset/: index.html
actions/draft-release/: index.html
actions/install-r-pak/: index.html
actions/label-issue-repo-name/: index.html
actions/maintain-milestones/: index.html
actions/mkdocs-mike/: index.html
actions/post-release/: index.html
actions/sync-copilot-instructions/: index.html
actions/user-projects/: index.html
add-issue-label-list/: README.md  README.qmd  action.yml
auto-add-user-project/: action.yml
build-docker/: README.md  README.qmd  action.yml
bump-actions-versions/: README.md  README.qmd  action.yml
changed-files/: README.md  README.qmd  action.yml
copy-ruleset/: README.md  README.qmd  action.yml
docs/: .gitignore  _actions.qmd  _quarto.yml  actions.qmd  badges.qmd  cite.qmd  cli.qmd  contributors.qmd  examples.qmd  gh-actions.qmd  gh-app-auth.qmd  help.qmd  index.qmd  install.qmd  package.qmd
draft-release/: README.md  README.qmd  action.yml
examples/: R-CMD-check.yaml  README.md  add-issue-label-list.yml  auto-format.yml  build-docker-auto.yml  build-docker-dispatch.yml  build-docker-manual.yml  build-nextflow.yml  build-python.yml  build-snakemake.yml  bump-actions-versions.yml  changed-files.yml  check-links.yml  copy-ruleset.yml  docs-mkdocs.yml  docs-quarto.yml  draft-release.yml  label-issues-repo-name.yml  maintain-milestones.yml  post-release.yml  review-pre-commit-pr.yml  sync-copilot-instructions.yml  techdev-project.yml  trigger-docker-dispatch.yml  update-cff-R.yml  user-projects.yml
install-r-pak/: README.md  README.qmd  action.yml
label-issue-repo-name/: README.md  README.qmd  action.yml
maintain-milestones/: README.md  README.qmd  action.yml
mkdocs-mike/: README.md  README.qmd  action.yml
post-release/: README.md  README.qmd  action.yml
reference/: actions.html  citation.html  data.html  docker.html  docs.html  index.html  release.html  util.html  versions.html
review-pre-commit-pr/: README.qmd  action.yml
scripts/: prepare_docker_build_variables.sh  print_versions.py  print_versions.sh  quarto-listings.py
setup-ccbr-actions/: action.yml
src/ccbr_actions/: CITATION.cff  __main__.py  docs.py  (+10 more)
sync-copilot-instructions/: README.md  README.qmd  action.yml
tests/: conftest.py  test_actions.py  test_bump_versions.py  test_changed_files.py  test_citation.py  test_cli.py  test_data.py  test_docker.py  test_docker_build_freshness.py  test_docs.py  test_github.py  test_pre_commit.py  test_print_versions.py  test_release.py  test_scripts.py  test_util.py  test_versions.py
user-projects/: README.md  README.qmd  action.yml
(+51 files in other folders)
