[build-system]
requires = [
    "setuptools >= 62.3.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ccbr_actions'
dynamic = ['version','readme']
description = "CCBR GitHub Actions"
authors = [
    {name = "Kelly Sovacool", email = "kelly.sovacool@nih.gov"},
    {name = "Vishal Koparde", email = "vishal.koparde@nih.gov"},
]
maintainers = [
    {name = "CCR Collaborative Bioinformatics Resource", email = "ccbr@mail.nih.gov"},
]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT license",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "Click >= 8.1.3",
    "mkdocs",
    "mike",
    "requests"
]

[project.optional-dependencies]
dev = [
    "black >= 23.10.0",
    "jupyter",
    "pre-commit",
    "pyyaml"
]
test = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
ccbr_actions = "ccbr_actions.__main__:main"

[project.urls]
Repository = "https://github.com/CCBR/actions"

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
# remember to use single quotes for regex in TOML
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]

[tool.setuptools.package-data]
"*" = ["LICENSE", "CHANGELOG.md", "lib/**", "examples/**"]

[tool.setuptools.dynamic]
version = {file = "src/ccbr_actions/VERSION"}
readme = {file = "README.md"}
